syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.atomic.cloud.grpc.common";

package common;

message CommonGroup {
    message List {
        repeated Short groups = 1;
    }
    message Short {
        string name = 1;
    }
}