syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.atomic.cloud.grpc.common";

package common;

message Notify {
    message PowerEvent {
        enum State {
            START = 0;
            STOP = 1;
        }
        string name = 1;
        string node = 2;
    }
}